<resources>
    <string name="app_name">YACS Android</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_open_source">Licenses</string>
    <string name="drawer_item_feedback">Send feedback</string>

    <string name="settings_activity_title">Preferences</string>
    <string name="select">Select</string>
    <string name="college">College</string>
    <string name="select_college">Select Your College</string>
    <string name="expand">Expand</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="dash">-</string>
</resources>
